fix checkbox & progress bar on mobile

--- a/src/styles/nprogress.scss
+++ b/src/styles/nprogress.scss
@@ -1,18 +1,24 @@
 @use '/src/styles/vars.scss' as *;
+@use '/src/styles/customMediaQueries.scss' as *;
 
 #nprogress {
   pointer-events: none;
 
   .bar {
-    background: $primaryPri2;
+    display: none;
 
-    position: fixed;
-    z-index: 1031;
-    top: 0;
-    left: 0;
+    @include viewportMedium {
+      display: block;
+      background: $primaryPri2;
 
-    width: 100%;
-    height: 2px;
+      position: fixed;
+      z-index: 1031;
+      top: 0;
+      left: 0;
+
+      width: 100%;
+      height: 2px;
+    }
   }
 
   .peg {
